@@ -32,30 +32,30 @@ def index():
     """
     intro_window = IntroWindow(api)
     intro_window.doModal()
-    category = intro_window.getProperty('category')
-    if category:
-        category = int(category)
-        sub_category = int(intro_window.getProperty('sub_category'))
+    section_id = intro_window.getProperty('section')
+    if section_id:
+        section_id = int(section_id)
+        category_id = int(intro_window.getProperty('category'))
         del intro_window
 
-        if category == 1:  # channels
-            show_channels(category, sub_category) if category != 99 else show_favorites()
-        elif category == 3:  # atmospheres
-            show_subcategories(category)
+        if section_id == 1:  # channels
+            show_channels(section_id, category_id) if section_id != 99 else show_favorites()
+        elif section_id == 3:  # atmospheres
+            show_categories(section_id)
         else:
             show_favorites()  # favorites
     else:
         del intro_window
 
 
-@PLUGIN.route('/category/<category_id>')
-def show_subcategories(category_id):
+@PLUGIN.route('/section/<section_id>')
+def show_categories(section_id):
     """
-    Sub-categories page
-    :param category_id: Selected category ID
+    Categories page
+    :param section_id: Selected section ID
     :return:
     """
-    for item in api.get_subcategories(int(category_id)):
+    for item in api.get_categories(int(section_id)):
         # list item:
         li = ListItem(item['name'].capitalize(),
                       iconImage='{0}/{1}'.format(config['urls']['calm_arts_host'], item['image']),
@@ -66,7 +66,7 @@ def show_subcategories(category_id):
         # directory item:
         addDirectoryItem(
                 PLUGIN.handle,
-                PLUGIN.url_for(show_channels, category_id=category_id, subcategory_id=item['id']),
+                PLUGIN.url_for(show_channels, section_id=section_id, category_id=item['id']),
                 li,
                 True
         )
@@ -78,15 +78,15 @@ def show_subcategories(category_id):
     ))
 
 
-@PLUGIN.route('/category/<category_id>/subcategory/<subcategory_id>')
-def show_channels(category_id, subcategory_id):
+@PLUGIN.route('/section/<section_id>/category/<category_id>')
+def show_channels(section_id, category_id):
     """
     Channels page (playable)
+    :param section_id: Selected section ID
     :param category_id: Selected category ID
-    :param subcategory_id: Selected sub-category ID
     :return:
     """
-    for item in api.get_channels(int(subcategory_id)):
+    for item in api.get_channels(int(category_id)):
         # list item:
         li = ListItem(u'{0} {1}'.format(item['title'].replace('CALM RADIO -', '').title(),
                                         ADDON.getLocalizedString(322023) if 'free' not in item['streams'] else '',
@@ -107,8 +107,8 @@ def show_channels(category_id, subcategory_id):
         addDirectoryItem(
                 PLUGIN.handle,
                 PLUGIN.url_for(play_channel,
+                               section_id=section_id,
                                category_id=category_id,
-                               subcategory_id=subcategory_id,
                                channel_id=item['id']),
                 li
         )
@@ -152,8 +152,8 @@ def show_favorites():
                 addDirectoryItem(
                         PLUGIN.handle,
                         PLUGIN.url_for(play_channel,
-                                       category_id=None,
-                                       subcategory_id=item['sub_category'],
+                                       section_id=None,
+                                       category_id=item['category'],
                                        channel_id=item['id']),
                         li
                 )
@@ -175,18 +175,19 @@ def show_favorites():
                        .format(ADDON.getLocalizedString(30000), ADDON.getLocalizedString(32110)))
 
 
-@PLUGIN.route('/category/<category_id>/subcategory/<subcategory_id>/channel/<channel_id>')
-def play_channel(category_id, subcategory_id, channel_id):
+@PLUGIN.route('/section/<section_id>/category/<category_id>/channel/<channel_id>')
+def play_channel(section_id, category_id, channel_id):
     """
     Plays selected song
+    :param section_id: Selected section ID
     :param category_id: Selected category ID
-    :param subcategory_id: Selected sub-category ID
     :param channel_id: Selected channel ID
     :return:
     """
     user = User()
     is_authenticated = user.authenticate()
-    channel = [item for item in api.get_channels(int(subcategory_id))
+    recent_tracks_url = ''
+    channel = [item for item in api.get_channels(int(category_id))
                if item['id'] == int(channel_id)][0]
     url = api.get_streaming_url(channel['streams'],
                                 user.username,
