@@ -24,24 +24,24 @@ class API(object):
         if r.status_code == 200:
             return json.loads(r.text)
 
-    def get_all_subcategories(self):
+    def get_all_categories(self):
         """
-        Returns a list of all sub categories
+        Returns a list of all categories
         :return:
         """
         results = []
-        for category in self.get_json(config['urls']['calm_categories_api']):
-            results += category['categories']
+        for section in self.get_json(config['urls']['calm_categories_api']):
+            results += section['categories']
         return results
 
-    def get_subcategories(self, category_id):
+    def get_categories(self, section_id):
         """
-        Returns a list of sub categories which belongs to specific category
-        :param category_id: Category ID
+        Returns a list of categories which belongs to specific section
+        :param section_id: Section ID
         :return:
         """
         return [item['categories'] for item in self.get_json(config['urls']['calm_categories_api'])
-                if item['id'] == category_id][0]
+                if item['id'] == section_id][0]
 
     def get_all_channels(self):
         """
@@ -53,14 +53,14 @@ class API(object):
             results += category['channels']
         return results
 
-    def get_channels(self, subcategory_id):
+    def get_channels(self, category_id):
         """
         Returns a list of playable channels which belongs to specific category
-        :param subcategory_id: Sub category ID
+        :param category_id: Category ID
         :return:
         """
         return [item['channels'] for item in self.get_json(config['urls']['calm_channels_api'])
-                if item['category'] == subcategory_id][0]
+                if item['category'] == category_id][0]
 
     def get_favorites(self, username, token):
         """
@@ -77,7 +77,7 @@ class API(object):
                 for category in self.get_json(config['urls']['calm_channels_api']):
                     for channel in category['channels']:
                         if str(channel['id']) in favorites:
-                            channel['sub_category'] = category['category']
+                            channel['category'] = category['category']
                             results.append(channel)
 
         return results
