@@ -1,3 +1,9 @@
+v-future
+- rename categories and sub categories to sections and categories
+- close windows on "BACK"
+- add player controls to  artwork window
+- fix bug which opens multiple intro windows upon system notifications (eminence)
+
 v0.2.0
 - New design
 - Serve images from network
